--- a/index.html
+++ b/index.html
@@ -24,13 +24,14 @@
       <div class="top">
         <div class="logo">
           <a href="index.html"
-            ><img src="assets/logo.jpg" width="180px" alt=""
+            ><img src="assets/logo-3.png" width="180px" alt=""
           /></a>
         </div>
         <div class="button-open" id="button-open" onclick="openNav()">
           &#9776;
         </div>
-        <div id="myTopnav" class="topnav">
+        <!-- ako je levi slide in, height se menja u width 0 -->
+        <div id="myTopnav" class="topnav" style="height: 0">
           <div
             href="javascript:void(0)"
             id="button-close"
@@ -39,39 +40,51 @@
           >
             &times;
           </div>
+          <div class="topnav-left">
+            <ul>
+              <li><a href="#">Our Collection</a></li>
+              <li><a href="#">Contact</a></li>
+              <li><a href="#">About Us</a></li>
+            </ul>
+          </div>
+          <div class="topnav-right">
+            <p>SARA</p>
+            <br />
+            <div class="desc">
+              Online gallery for vintage design furniture based in Utrecht.
+              info@www.objekt-vintage.nl
+            </div>
 
-          <a href="#">Our Collection</a>
-          <a href="#">Contact</a>
-          <a href="#">About Us</a>
+            <p></p>
+          </div>
         </div>
       </div>
 
       <div class="top-bar">
         <div class="lead">
-          <h3>Our Collection</h3>
-          <br />
+          <div class="lead-heading">Our Collection</div>
           <p>Are you looking for something special? Contact us!</p>
         </div>
       </div>
     </header>
 
-    <div class="products animate__animated animate__fadeIn">
+    <div class="products animate__animated animate__fadeIn animate__delay-1s">
       <a href="product-1.html">
         <div class="product">
           <div class="product-img">
             <img src="assets/product-1.jpg" alt="" />
           </div>
           <div class="product-info">
-            <h3>Product Name</h3>
+            <div class="p-name">Very Long Vintage Retro Product Name Here</div>
             <br />
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Voluptatum, quisquam.
             </p>
             <br />
-            <div class="price">
+            <!-- <div class="price">
               <span>$1000</span>
-            </div>
+            </div> -->
           </div>
         </div>
       </a>
@@ -82,16 +95,176 @@
             <img src="assets/product-1.jpg" alt="" />
           </div>
           <div class="product-info">
-            <h3>Product Name</h3>
+            <div class="p-name">Very Long Vintage Retro Product Name Here</div>
             <br />
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Voluptatum, quisquam.
             </p>
             <br />
-            <div class="price">
+            <!-- <div class="price">
               <span>$1000</span>
-            </div>
+            </div> -->
+          </div>
+        </div>
+      </a>
+
+      <a href="product-1.html">
+        <div class="product">
+          <div class="product-img">
+            <img src="assets/product-1.jpg" alt="" />
+          </div>
+          <div class="product-info">
+            <div class="p-name">Very Long Vintage Retro Product Name Here</div>
+            <br />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Voluptatum, quisquam.
+            </p>
+            <br />
+            <!-- <div class="price">
+              <span>$1000</span>
+            </div> -->
+          </div>
+        </div>
+      </a>
+
+      <a href="product-1.html">
+        <div class="product">
+          <div class="product-img">
+            <img src="assets/product-1.jpg" alt="" />
+          </div>
+          <div class="product-info">
+            <div class="p-name">Very Long Vintage Retro Product Name Here</div>
+            <br />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Voluptatum, quisquam.
+            </p>
+            <br />
+            <!-- <div class="price">
+              <span>$1000</span>
+            </div> -->
+          </div>
+        </div>
+      </a>
+
+      <a href="product-1.html">
+        <div class="product">
+          <div class="product-img">
+            <img src="assets/product-1.jpg" alt="" />
+          </div>
+          <div class="product-info">
+            <div class="p-name">Very Long Vintage Retro Product Name Here</div>
+            <br />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Voluptatum, quisquam.
+            </p>
+            <br />
+            <!-- <div class="price">
+              <span>$1000</span>
+            </div> -->
+          </div>
+        </div>
+      </a>
+
+      <a href="product-1.html">
+        <div class="product">
+          <div class="product-img">
+            <img src="assets/product-1.jpg" alt="" />
+          </div>
+          <div class="product-info">
+            <div class="p-name">Very Long Vintage Retro Product Name Here</div>
+            <br />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Voluptatum, quisquam.
+            </p>
+            <br />
+            <!-- <div class="price">
+              <span>$1000</span>
+            </div> -->
+          </div>
+        </div>
+      </a>
+
+      <a href="product-1.html">
+        <div class="product">
+          <div class="product-img">
+            <img src="assets/product-1.jpg" alt="" />
+          </div>
+          <div class="product-info">
+            <div class="p-name">Very Long Vintage Retro Product Name Here</div>
+            <br />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Voluptatum, quisquam.
+            </p>
+            <br />
+            <!--  <div class="price">
+              <span>$1000</span>
+            </div> -->
+          </div>
+        </div>
+      </a>
+
+      <a href="product-1.html">
+        <div class="product">
+          <div class="product-img">
+            <img src="assets/product-1.jpg" alt="" />
+          </div>
+          <div class="product-info">
+            <div class="p-name">Very Long Vintage Retro Product Name Here</div>
+            <br />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Voluptatum, quisquam.
+            </p>
+            <br />
+            <!-- <div class="price">
+              <span>$1000</span>
+            </div> -->
+          </div>
+        </div>
+      </a>
+
+      <a href="product-1.html">
+        <div class="product">
+          <div class="product-img">
+            <img src="assets/product-1.jpg" alt="" />
+          </div>
+          <div class="product-info">
+            <div class="p-name">Very Long Vintage Retro Product Name Here</div>
+            <br />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Voluptatum, quisquam.
+            </p>
+            <br />
+            <!--   <div class="price">
+              <span>$1000</span>
+            </div> -->
+          </div>
+        </div>
+      </a>
+
+      <a href="product-1.html">
+        <div class="product">
+          <div class="product-img">
+            <img src="assets/product-1.jpg" alt="" />
+          </div>
+          <div class="product-info">
+            <div class="p-name">Very Long Vintage Retro Product Name Here</div>
+            <br />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Voluptatum, quisquam.
+            </p>
+            <br />
+            <!--  <div class="price">
+              <span>$1000</span>
+            </div> -->
           </div>
         </div>
       </a>
@@ -101,73 +274,37 @@
             <img src="assets/product-1.jpg" alt="" />
           </div>
           <div class="product-info">
-            <h3>Product Name</h3>
+            <div class="p-name">Very Long Vintage Retro Product Name Here</div>
             <br />
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Voluptatum, quisquam.
             </p>
             <br />
-            <div class="price">
+            <!--  <div class="price">
               <span>$1000</span>
-            </div>
+            </div> -->
           </div>
         </div>
       </a>
+
       <a href="product-1.html">
         <div class="product">
           <div class="product-img">
             <img src="assets/product-1.jpg" alt="" />
           </div>
           <div class="product-info">
-            <h3>Product Name</h3>
+            <div class="p-name">Very Long Vintage Retro Product Name Here</div>
             <br />
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Voluptatum, quisquam.
             </p>
             <br />
-            <div class="price">
+            <!--             <div class="price">
               <span>$1000</span>
             </div>
-          </div>
-        </div>
-      </a>
-      <a href="product-1.html">
-        <div class="product">
-          <div class="product-img">
-            <img src="assets/product-1.jpg" alt="" />
-          </div>
-          <div class="product-info">
-            <h3>Product Name</h3>
-            <br />
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatum, quisquam.
-            </p>
-            <br />
-            <div class="price">
-              <span>$1000</span>
-            </div>
-          </div>
-        </div>
-      </a>
-      <a href="product-1.html">
-        <div class="product">
-          <div class="product-img">
-            <img src="assets/product-1.jpg" alt="" />
-          </div>
-          <div class="product-info">
-            <h3>Product Name</h3>
-            <br />
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatum, quisquam.
-            </p>
-            <br />
-            <div class="price">
-              <span>$1000</span>
-            </div>
+ -->
           </div>
         </div>
       </a>
@@ -180,8 +317,8 @@
       </h4>
       <br />
       <p>
-        OBJEKT Vintage Furniture © Copyright 2020 • NL002195839B11 <br />
-        Contact us info@www.objekt-vintage.nl
+        SARA Vintage Furniture © Copyright 2001 <br />
+        Contact us info@sara-vintage.com
       </p>
     </footer>
 
