--- a/product-1.html
+++ b/product-1.html
@@ -18,17 +18,19 @@
   </head>
 
   <body>
-    <head>
+    <header>
       <div id="main"></div>
 
       <div class="top">
         <div class="logo">
-          <a href="index.html"><img src="assets/logo.jpg" alt="" /></a>
+          <a href="index.html"
+            ><img src="assets/logo-3.png" width="180px" alt=""
+          /></a>
         </div>
         <div class="button-open" id="button-open" onclick="openNav()">
           &#9776;
         </div>
-        <div id="myTopnav" class="topnav">
+        <div id="myTopnav" class="topnav" style="height: 0">
           <div
             href="javascript:void(0)"
             id="button-close"
@@ -37,17 +39,30 @@
           >
             &times;
           </div>
+          <div class="topnav-left">
+            <ul>
+              <li><a href="#">Our Collection</a></li>
+              <li><a href="#">Contact</a></li>
+              <li><a href="#">About Us</a></li>
+            </ul>
+          </div>
+          <div class="topnav-right">
+            <p>SARA</p>
+            <br />
+            <div class="desc">
+              Online gallery for vintage design furniture based in Utrecht.
+              info@www.objekt-vintage.nl
+            </div>
 
-          <a href="#">Our Collection</a>
-          <a href="#">Contact</a>
-          <a href="#">About Us</a>
+            <p></p>
+          </div>
         </div>
       </div>
-    </head>
+    </header>
 
     <div class="product-display">
       <div class="prod-description">
-        <h2>Long Product Name Goes Here</h2>
+        <div class="long-name">Long Product Name Goes Here</div>
         <br /><br />
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo non
@@ -58,11 +73,19 @@
           similique corrupti autem?
         </p>
         <br /><br />
-        <p>Condition: Good vintage condition</p>
+        <p>
+          Condition: Very good vintage condition. Some minor rust on the frame
+          as shown on the picture.
+        </p>
+        <br /><br />
+        <p>Literature: 1000 Chairs, Taschen: pag.574</p>
+        <p>Hoogte: 87 cm. / 34.3 inch</p>
+        <p>Breedte: 52,5 cm. / 20.7 inch</p>
+        <p>Diepte: 68 cm. / 26.8 inch</p>
         <br /><br />
         <p>
           Price<br />
-          1000
+          1000,-
         </p>
         <br /><br /><br /><br />
         <p>Contact Us</p>
@@ -89,8 +112,8 @@
       </h4>
       <br />
       <p>
-        OBJEKT Vintage Furniture © Copyright 2020 • NL002195839B11 <br />
-        Contact us <a href="mailto:#">info@www.objekt-vintage.nl</a>
+        SARA Vintage Furniture © Copyright 2001 <br />
+        Contact us info@sara-vintage.com
       </p>
     </footer>
 
