--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <div class="top-bar">
         <div class="lead">
           <div class="lead-heading">Our Collection</div>
-          <p>Are you looking for something special? Contact us!</p>
+          <p>Are you looking for something special? <a href="mailto:someone@yoursite.com">Contact Us</a>  </p>
         </div>
       </div>
     </header>
