--- a/product-1.html
+++ b/product-1.html
@@ -59,10 +59,12 @@
         </div>
       </div>
     </header>
-
+    <a href="index.html"><p class="back">&#8592;</p></a>        
     <div class="product-display">
+      
       <div class="prod-description">
-        <div class="long-name">Long Product Name Goes Here</div>
+      
+        <div class="long-name" >Long Product Name Goes Here</div>
         <br /><br />
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo non
