--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       rel="stylesheet"
     />
 
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+
     <title>SARA</title>
   </head>
 
@@ -68,9 +71,9 @@
       </div>
     </header>
 
-    <div class="products animate__animated animate__fadeIn animate__delay-1s">
+    <div class="products">
       <a href="product-1.html">
-        <div class="product">
+        <div class="product" data-aos="zoom-in" data-aos-delay="100">
           <div class="product-img">
             <img src="assets/product-1.jpg" alt="" />
           </div>
@@ -90,7 +93,7 @@
       </a>
 
       <a href="product-1.html">
-        <div class="product">
+        <div class="product" data-aos="zoom-in" data-aos-delay="100" >
           <div class="product-img">
             <img src="assets/product-1.jpg" alt="" />
           </div>
@@ -110,7 +113,7 @@
       </a>
 
       <a href="product-1.html">
-        <div class="product">
+        <div class="product" data-aos="zoom-in" data-aos-delay="100">
           <div class="product-img">
             <img src="assets/product-1.jpg" alt="" />
           </div>
@@ -130,7 +133,7 @@
       </a>
 
       <a href="product-1.html">
-        <div class="product">
+        <div class="product" data-aos="zoom-in" data-aos-delay="100">
           <div class="product-img">
             <img src="assets/product-1.jpg" alt="" />
           </div>
@@ -150,7 +153,7 @@
       </a>
 
       <a href="product-1.html">
-        <div class="product">
+        <div class="product" data-aos="zoom-in" data-aos-delay="100" >
           <div class="product-img">
             <img src="assets/product-1.jpg" alt="" />
           </div>
@@ -170,7 +173,7 @@
       </a>
 
       <a href="product-1.html">
-        <div class="product">
+        <div class="product" data-aos="zoom-in" data-aos-delay="100">
           <div class="product-img">
             <img src="assets/product-1.jpg" alt="" />
           </div>
@@ -190,27 +193,7 @@
       </a>
 
       <a href="product-1.html">
-        <div class="product">
-          <div class="product-img">
-            <img src="assets/product-1.jpg" alt="" />
-          </div>
-          <div class="product-info">
-            <div class="p-name">Very Long Vintage Retro Product Name Here</div>
-            <br />
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatum, quisquam.
-            </p>
-            <br />
-            <!--  <div class="price">
-              <span>$1000</span>
-            </div> -->
-          </div>
-        </div>
-      </a>
-
-      <a href="product-1.html">
-        <div class="product">
+        <div class="product" data-aos="zoom-in" data-aos-delay="100">
           <div class="product-img">
             <img src="assets/product-1.jpg" alt="" />
           </div>
@@ -230,7 +213,7 @@
       </a>
 
       <a href="product-1.html">
-        <div class="product">
+        <div class="product" data-aos="zoom-in" data-aos-delay="100" >
           <div class="product-img">
             <img src="assets/product-1.jpg" alt="" />
           </div>
@@ -242,7 +225,7 @@
               Voluptatum, quisquam.
             </p>
             <br />
-            <!--   <div class="price">
+            <!-- <div class="price">
               <span>$1000</span>
             </div> -->
           </div>
@@ -250,7 +233,7 @@
       </a>
 
       <a href="product-1.html">
-        <div class="product">
+        <div class="product" data-aos="zoom-in" data-aos-delay="100">
           <div class="product-img">
             <img src="assets/product-1.jpg" alt="" />
           </div>
@@ -262,52 +245,13 @@
               Voluptatum, quisquam.
             </p>
             <br />
-            <!--  <div class="price">
+            <!-- <div class="price">
               <span>$1000</span>
             </div> -->
           </div>
         </div>
       </a>
-      <a href="product-1.html">
-        <div class="product">
-          <div class="product-img">
-            <img src="assets/product-1.jpg" alt="" />
-          </div>
-          <div class="product-info">
-            <div class="p-name">Very Long Vintage Retro Product Name Here</div>
-            <br />
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatum, quisquam.
-            </p>
-            <br />
-            <!--  <div class="price">
-              <span>$1000</span>
-            </div> -->
-          </div>
-        </div>
-      </a>
-
-      <a href="product-1.html">
-        <div class="product">
-          <div class="product-img">
-            <img src="assets/product-1.jpg" alt="" />
-          </div>
-          <div class="product-info">
-            <div class="p-name">Very Long Vintage Retro Product Name Here</div>
-            <br />
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatum, quisquam.
-            </p>
-            <br />
-            <!--             <div class="price">
-              <span>$1000</span>
-            </div>
- -->
-          </div>
-        </div>
-      </a>
+     
     </div>
 
     <footer>
@@ -323,5 +267,11 @@
     </footer>
 
     <script src="script.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        duration: 1000,}
+      );
+    </script>
   </body>
 </html>
