--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="top">
         <div class="logo">
           <a href="index.html"
-            ><img src="assets/logo-3.png" width="180px" alt=""
+            ><img src="assets/logo-3.png" alt=""
           /></a>
         </div>
         <div class="button-open" id="button-open" onclick="openNav()">
@@ -270,7 +270,7 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init({
-        duration: 1000,}
+        duration: 900,}
       );
     </script>
   </body>
