--- a/product-1.html
+++ b/product-1.html
@@ -25,7 +25,7 @@
       <div class="top">
         <div class="logo">
           <a href="index.html"
-            ><img src="assets/logo-3.png" width="180px" alt=""
+            ><img src="assets/logo-3.png" alt=""
           /></a>
         </div>
         <div class="button-open" id="button-open" onclick="openNav()">
