--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
             </ul>
           </div>
           <div class="topnav-right">
-            <p>SARA</p>
+            <p>SARA Vie Defú</p>
             <br />
             <div class="desc">
-              Online gallery for vintage design furniture based in Utrecht.
-              info@www.objekt-vintage.nl
+              Online gallery for vintage design furniture based in Berlin.
+              info@sara-vie-de-fu.com
             </div>
 
             <p></p>
@@ -270,7 +270,7 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init({
-        duration: 900,}
+        duration: 500,}
       );
     </script>
   </body>
