--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="top">
         <div class="logo">
           <a href="index.html"
-            ><img src="assets/logo-3.png" alt=""
+            ><img src="assets/taramis-logo.jpg" alt=""
           /></a>
         </div>
         <div class="button-open" id="button-open" onclick="openNav()">
