--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </ul>
           </div>
           <div class="topnav-right">
-            <p>SARA Vie Defú</p>
+            <p>Taramis Vintage</p>
             <br />
             <div class="desc">
               Online gallery for vintage design furniture based in Berlin.
