--- a/product-1.html
+++ b/product-1.html
@@ -48,7 +48,7 @@
             </ul>
           </div>
           <div class="topnav-right">
-            <p>SARA Vie Defú</p>
+            <p>Taramis Vintage</p>
             <br />
             <div class="desc">
               Online gallery for vintage design furniture based in Berlin.
@@ -116,7 +116,7 @@
       <br />
       <p>
         SARA Vintage Furniture © Copyright 2001 <br />
-        Contact us info@sara-vintage.com
+        Contact us info@taramis-vintage.com
       </p>
     </footer>
 
