--- a/index.html
+++ b/index.html
@@ -261,8 +261,8 @@
       </h4>
       <br />
       <p>
-        SARA Vintage Furniture © Copyright 2001 <br />
-        Contact us info@sara-vintage.com
+        Taramis Vintage Furniture © Copyright 2001 <br />
+        Contact us info@taramis-vintage.com
       </p>
     </footer>
 
