--- a/product-1.html
+++ b/product-1.html
@@ -115,7 +115,7 @@
       </h4>
       <br />
       <p>
-        SARA Vintage Furniture © Copyright 2001 <br />
+        Taramis Vintage Furniture © Copyright 2001 <br />
         Contact us info@taramis-vintage.com
       </p>
     </footer>
