--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
       <br />
       <p>
         Taramis Vintage Furniture © Copyright 2001 <br />
-        Contact us info@taramis-vintage.com
+        Contact us info@taramis.net
       </p>
     </footer>
 
