--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
 
 
-    <title>Taramis</title>
+    <title>Taramis Interiors</title>
   </head>
 
   <body>
@@ -26,7 +26,7 @@
 
       <div class="top">
         <div class="logo">
-          <a href="index.html"
+          <a href="/index.html"
             ><img src="assets/taramis-logo.jpg" alt=""
           /></a>
         </div>
@@ -46,16 +46,17 @@
           <div class="topnav-left">
             <ul>
               <li><a href="#">Our Collection</a></li>
-              <li><a href="#">Contact</a></li>
-              <li><a href="#">About Us</a></li>
+                        <li><a href="/journal.html">Journal</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">About Us</a></li>
             </ul>
           </div>
           <div class="topnav-right">
-            <p>Taramis Vintage</p>
+            <p>Taramis Interiors</p>
             <br />
             <div class="desc">
               Online gallery for vintage design furniture based in Berlin.
-              info@taramis.net
+              info@sara-vie-de-fu.com
             </div>
 
             <p></p>
@@ -66,7 +67,7 @@
       <div class="top-bar">
         <div class="lead">
           <div class="lead-heading">Our Collection</div>
-          <p>Are you looking for something special? <a href="mailto:someone@yoursite.com">Contact Us</a>  </p>
+          <p>Are you looking for something special? <a href="mailto:info@taramis.net">Contact Us</a>  </p>
         </div>
         <div class="categories">
         <div id="myBtnContainer">
@@ -85,222 +86,64 @@
 
     <div class="products">
 
-      <div class="filterDiv lighting">
-        <a href="product-1.html">
+      <div class="filterDiv seating archive">
+        <a href="/pages/2-door-sideboard-by-willy-rizzo-1970s.html">
         <div class="product" data-aos="zoom-in" data-aos-delay="100">
           <div class="product-img">
-            <img src="assets/gallery/lamp-1.jpg" alt="" />
+            <img src="/products/2-Door Sideboard by Willy Rizzo 1970’s/2-door-sideboard-by-willy-rizzo-1970s-1.jpg" alt="" />
           </div>
           <div class="product-info">
-            <div class="p-name">Very Long Vintage Retro Product Name Here</div>
+            <div class="p-name">Very large Modular 1970’s Sofa (2 pieces)</div>
             <br />
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatum, quisquam.
+            <p>Beautiful 1970’s Modular sofa reupholstered in cream velvet. Very high quality!It consists of two elements ( each 340 cm long) that can be arrange as desired.  Would look amazing in any mid-
             </p>
-             
+            <br>
+            <p>SOLD</p>
           </div>
         </div>
       </a>
     </div>
 
-    <div class="filterDiv tables">
-      <a href="product-1.html">
+    <div class="filterDiv seating archive">
+      <a href="/pages/mid-century-1950s-italian-armchairs.html">
       <div class="product" data-aos="zoom-in" data-aos-delay="100">
         <div class="product-img">
-          <img src="assets/gallery/table-1.jpg" alt="" />
+          <img src="/products/Mid Century 1950’s Italian Armchairs/mid-century-1950s-italian-armchairs-1.jpg" alt="" />
         </div>
         <div class="product-info">
-          <div class="p-name">Very Long Vintage Retro Product Name Here</div>
+          <div class="p-name">Mid Century 1950’s Italian Armchairs</div>
           <br />
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Voluptatum, quisquam.
+            Italian armchair in the style of Marco Zanuso upholstered in new textile. Brass legs
           </p>
+          <br>
+          <p>SOLD</p>
         </div>
       </div>
     </a>
   </div>
 
-  <div class="filterDiv tables">
-    <a href="product-1.html">
+
+
+  <div class="filterDiv seating">
+    <a href="/pages/large-curved-coma-sofa-1950s.html">
     <div class="product" data-aos="zoom-in" data-aos-delay="100">
       <div class="product-img">
-        <img src="assets/gallery/table-2.jpg" alt="" />
+        <img src="/products/Large curved Coma sofa 1950’s/large-curved-coma-sofa-1950s-1.jpg" alt="" />
       </div>
       <div class="product-info">
-        <div class="p-name">Very Long Vintage Retro Product Name Here</div>
+        <div class="p-name">Large Curved Coma Sofa 1950’s</div>
         <br />
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Voluptatum, quisquam.
+          A large Italian curved sofa in the style of Ice Parisi on brass feet, blue velvet. 1970’s
         </p>
+        <br>
+        <p>Upon Request</p>
       </div>
     </div>
   </a>
 </div>
 
-<div class="filterDiv storage">
-  <a href="product-1.html">
-  <div class="product" data-aos="zoom-in" data-aos-delay="100">
-    <div class="product-img">
-      <img src="assets/gallery/storage-2.jpg" alt="" />
-    </div>
-    <div class="product-info">
-      <div class="p-name">Very Long Vintage Retro Product Name Here</div>
-      <br />
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Voluptatum, quisquam.
-      </p>
-    </div>
-  </div>
-</a>
-</div>
-
-<div class="filterDiv tables">
-  <a href="product-1.html">
-  <div class="product" data-aos="zoom-in" data-aos-delay="100">
-    <div class="product-img">
-      <img src="assets/gallery/table-1.jpg" alt="" />
-    </div>
-    <div class="product-info">
-      <div class="p-name">Very Long Vintage Retro Product Name Here</div>
-      <br />
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Voluptatum, quisquam.
-      </p>
-    </div>
-  </div>
-</a>
-</div>
-
-<div class="filterDiv tables">
-  <a href="product-1.html">
-  <div class="product" data-aos="zoom-in" data-aos-delay="100">
-    <div class="product-img">
-      <img src="assets/gallery/table-2.jpg" alt="" />
-    </div>
-    <div class="product-info">
-      <div class="p-name">Very Long Vintage Retro Product Name Here</div>
-      <br />
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Voluptatum, quisquam.
-      </p>
-    </div>
-  </div>
-</a>
-</div>
-
-<div class="filterDiv seating">
-  <a href="product-1.html">
-  <div class="product" data-aos="zoom-in" data-aos-delay="100">
-    <div class="product-img">
-      <img src="assets/gallery/seating-1.jpg" alt="" />
-    </div>
-    <div class="product-info">
-      <div class="p-name">Very Long Vintage Retro Product Name Here</div>
-      <br />
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Voluptatum, quisquam.
-      </p>
-    </div>
-  </div>
-</a>
-</div>
-
-    <div class="filterDiv seating">
-      <a href="product-1.html">
-      <div class="product" data-aos="zoom-in" data-aos-delay="100">
-        <div class="product-img">
-          <img src="assets/gallery/seating-2.jpg" alt="" />
-        </div>
-        <div class="product-info">
-          <div class="p-name">Very Long Vintage Retro Product Name Here</div>
-          <br />
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Voluptatum, quisquam.
-          </p>
-        </div>
-      </div>
-    </a>
-  </div>
-
-  <div class="filterDiv other">
-    <a href="product-1.html">
-    <div class="product" data-aos="zoom-in" data-aos-delay="100">
-      <div class="product-img">
-        <img src="assets/gallery/other-1.jpg" alt="" />
-      </div>
-      <div class="product-info">
-        <div class="p-name">Very Long Vintage Retro Product Name Here</div>
-        <br />
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Voluptatum, quisquam.
-        </p>
-      </div>
-    </div>
-  </a>
-</div>
-
-<div class="filterDiv seating">
-  <a href="product-1.html">
-  <div class="product" data-aos="zoom-in" data-aos-delay="100">
-    <div class="product-img">
-      <img src="assets/gallery/seating-2.jpg" alt="" />
-    </div>
-    <div class="product-info">
-      <div class="p-name">Very Long Vintage Retro Product Name Here</div>
-      <br />
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Voluptatum, quisquam.
-      </p>
-    </div>
-  </div>
-</a>
-</div>
-
-<div class="filterDiv lighting">
-  <a href="product-1.html">
-  <div class="product" data-aos="zoom-in" data-aos-delay="100">
-    <div class="product-img">
-      <img src="assets/gallery/lamp-1.jpg" alt="" />
-    </div>
-    <div class="product-info">
-      <div class="p-name">Very Long Vintage Retro Product Name Here</div>
-      <br />
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Voluptatum, quisquam.
-      </p>
-    </div>
-  </div>
-</a>
-</div>
-
-<div class="filterDiv storage">
-  <a href="product-1.html">
-  <div class="product" data-aos="zoom-in" data-aos-delay="100">
-    <div class="product-img">
-      <img src="assets/gallery/storage-1.jpg" alt="" />
-    </div>
-    <div class="product-info">
-      <div class="p-name">Very Long Vintage Retro Product Name Here</div>
-      <br />
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Voluptatum, quisquam.
-      </p>
-    </div>
-  </div>
-</a>
-</div>
 
 
     </div>
@@ -318,7 +161,7 @@
       </h4>
       <br />
       <p>
-        Taramis Vintage Furniture © Copyright 2001 <br />
+        Taramis Interiors © Copyright 2001 <br />
         Contact us info@taramis.net
       </p>
     </footer>
