--- a/journal.html
+++ b/journal.html
@@ -78,18 +78,12 @@
         </div>
     </header>
 
-
-    
-
-
     <div class="blog-posts">
-
         <a href="/blog/journal-1.html">
         <div class="blogpost">
-
             <div class="product" data-aos="zoom-in" data-aos-delay="100">
                 <div class="product-img">
-                    <img src="blog/1/1-main.png" alt="" />
+                    <img src="blog/1/1-main.jpg" alt="" />
                 </div>
                 <div class="product-info">
                     <div class="p-name">1970’s Collectible Design</div>
@@ -107,10 +101,11 @@
         </div>
         </a>
 
+        <a href="/blog/journal-2.html">
         <div class="blogpost">
             <div class="product" data-aos="zoom-in" data-aos-delay="100">
                 <div class="product-img">
-                    <img src="blog/2/2-main.png" alt="" />
+                    <img src="blog/2/2-main.jpg" alt="" />
                 </div>
                 <div class="product-info">
                     <div class="p-name">Parlez - vous Luxe?</div>
@@ -123,11 +118,13 @@
                 </div>
             </div>
         </div>
+        </a>
 
+        <a href="/blog/journal-3.html">
         <div class="blogpost">
             <div class="product" data-aos="zoom-in" data-aos-delay="100">
                 <div class="product-img">
-                    <img src="blog/3/3-main.png" alt="" />
+                    <img src="blog/3/3-main.jpg" alt="" />
                 </div>
                 <div class="product-info">
                     <div class="p-name">Maximalism in France</div>
@@ -140,9 +137,26 @@
                 </div>
             </div>
         </div>
+    </a>
 
-
-
+        <a href="/blog/journal-4.html">
+            <div class="blogpost">
+                <div class="product" data-aos="zoom-in" data-aos-delay="100">
+                    <div class="product-img">
+                        <img src="blog/4/4-main.jpg" alt="" />
+                    </div>
+                    <div class="product-info">
+                        <div class="p-name">The Art of Collecting?</div>
+                        <br />
+                        <p>
+                            It’s a beautiful thing when a person’s home tells a story and draws you into their per-sonal life. Anais Nin once said: “luxury is not a necessity to me, but beautiful and good things are”. What draws us to collecting objects? Is it a personal desire for ac-quiring beauty or a more calculating move  to invest wisely?
+                        </p>
+                        <br>
+                        <p>Continue reading...</p>
+                    </div>
+                </div>
+            </div>
+            </a>
 
 
 
