--- a/journal.html
+++ b/journal.html
@@ -79,7 +79,7 @@
     </header>
 
     <div class="blog-posts">
-        <a href="blog/journal-1.html">
+        <a href="./blog/journal-1.html">
         <div class="blogpost">
             <div class="product" data-aos="zoom-in" data-aos-delay="100">
                 <div class="product-img">
@@ -101,7 +101,7 @@
         </div>
         </a>
 
-        <a href="blog/journal-2.html">
+        <a href="./blog/journal-2.html">
         <div class="blogpost">
             <div class="product" data-aos="zoom-in" data-aos-delay="100">
                 <div class="product-img">
@@ -120,7 +120,7 @@
         </div>
         </a>
 
-        <a href="blog/journal-3.html">
+        <a href="./blog/journal-3.html">
         <div class="blogpost">
             <div class="product" data-aos="zoom-in" data-aos-delay="100">
                 <div class="product-img">
@@ -139,7 +139,7 @@
         </div>
     </a>
 
-        <a href="blog/journal-4.html">
+        <a href="./blog/journal-4.html">
             <div class="blogpost">
                 <div class="product" data-aos="zoom-in" data-aos-delay="100">
                     <div class="product-img">
