--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
     <div class="about">
         
         <div class="about-left">
-        <img src="/assets/about.jpg" alt="">
+        <img src="assets/about.jpg" alt="">
     </div>
     
     <div class="about-right">
